[gd_scene load_steps=3 format=3 uid="uid://7a7877qgtqq5"]

[ext_resource type="Texture2D" uid="uid://day0twdkrxixi" path="res://main/UI/Menu/assets/menu_background.png" id="1_1iahh"]
[ext_resource type="Script" path="res://main/UI/Menu/menu.gd" id="1_puk4v"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_puk4v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_1iahh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="MenuContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 5

[node name="Label" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Microgames Jam"

[node name="NewGameButton" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Settings"

[node name="AboutButton" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "About
"

[node name="QuitButton" type="Button" parent="CenterContainer/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="DifficultyContainer" type="HBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 22

[node name="Easy" type="Button" parent="CenterContainer/DifficultyContainer"]
layout_mode = 2
text = "Easy"

[node name="Normal" type="Button" parent="CenterContainer/DifficultyContainer"]
layout_mode = 2
text = "Normal"

[node name="Hard" type="Button" parent="CenterContainer/DifficultyContainer"]
layout_mode = 2
text = "Hard"

[connection signal="pressed" from="CenterContainer/MenuContainer/NewGameButton" to="." method="_on_menu_button_pressed" binds= ["new_game"]]
[connection signal="pressed" from="CenterContainer/MenuContainer/SettingsButton" to="." method="_on_menu_button_pressed" binds= ["settings"]]
[connection signal="pressed" from="CenterContainer/MenuContainer/AboutButton" to="." method="_on_menu_button_pressed" binds= ["about"]]
[connection signal="pressed" from="CenterContainer/MenuContainer/QuitButton" to="." method="_on_menu_button_pressed" binds= ["quit"]]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/Easy" to="." method="_on_difficulty_selection" binds= ["easy"]]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/Normal" to="." method="_on_difficulty_selection" binds= ["normal"]]
[connection signal="pressed" from="CenterContainer/DifficultyContainer/Hard" to="." method="_on_difficulty_selection" binds= ["hard"]]
